Ingress_3Serv/ing_tom.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomcat:9.0
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-node
spec:
  type: ClusterIP
  selector:
    app: tomcat
  ports:
    - name: podport
      protocol: TCP
      port: 8090
      targetPort: 8080
