Ingress_3Serv/ing-graf.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-node
            port:
              number: 8080
      - path: /tomcat
        pathType: Prefix
        backend:
          service:
            name: tomcat-node
            port:
              number: 8090                   
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
